--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,11 +1,153 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="CTx-Cc-2D2">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--User-->
+        <scene sceneID="qgA-kg-pQG">
+            <objects>
+                <tableViewController id="t22-Uw-l6W" customClass="UsersTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="pwy-q2-eQY">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" rowHeight="87" id="qPh-K7-Lzc" customClass="UsersTableViewCell" customModule="Random_Users" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="87"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qPh-K7-Lzc" id="A4G-To-CFH">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="87"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0XS-Dz-7VR">
+                                            <rect key="frame" x="16" y="11" width="59" height="65"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="59" id="21h-9X-I7L"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rHR-Oy-iZo">
+                                            <rect key="frame" x="83" y="0.0" width="276" height="87"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="rHR-Oy-iZo" firstAttribute="top" secondItem="A4G-To-CFH" secondAttribute="topMargin" constant="-11" id="3rR-lo-sX9"/>
+                                        <constraint firstItem="0XS-Dz-7VR" firstAttribute="leading" secondItem="A4G-To-CFH" secondAttribute="leadingMargin" id="6Fs-mJ-7XM"/>
+                                        <constraint firstItem="rHR-Oy-iZo" firstAttribute="centerY" secondItem="A4G-To-CFH" secondAttribute="centerY" id="HY6-yh-RIA"/>
+                                        <constraint firstItem="rHR-Oy-iZo" firstAttribute="leading" secondItem="0XS-Dz-7VR" secondAttribute="trailing" constant="8" id="Pnp-FY-iQJ"/>
+                                        <constraint firstItem="rHR-Oy-iZo" firstAttribute="trailing" secondItem="A4G-To-CFH" secondAttribute="trailingMargin" id="ZFv-1B-nlF"/>
+                                        <constraint firstItem="0XS-Dz-7VR" firstAttribute="top" secondItem="A4G-To-CFH" secondAttribute="topMargin" id="rQ7-pz-cCf"/>
+                                        <constraint firstItem="0XS-Dz-7VR" firstAttribute="centerY" secondItem="A4G-To-CFH" secondAttribute="centerY" id="rur-b2-4Xs"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="nameLabel" destination="rHR-Oy-iZo" id="7Y7-Sd-0dr"/>
+                                    <outlet property="userImage" destination="0XS-Dz-7VR" id="n1U-od-eP0"/>
+                                    <segue destination="oot-jv-R0b" kind="show" identifier="UserCellSegue" id="Bzd-5T-D3W"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="t22-Uw-l6W" id="tzS-go-dZL"/>
+                            <outlet property="delegate" destination="t22-Uw-l6W" id="BID-3C-LdR"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="User" id="OQ1-Qb-u1D">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="9hI-DC-0pm">
+                            <connections>
+                                <action selector="addButtonPressed:" destination="t22-Uw-l6W" id="d9D-1x-PKc"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="F42-aY-xZ1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="245.59999999999999" y="-1622.3388305847077"/>
+        </scene>
+        <!--Users Detailed View Controller-->
+        <scene sceneID="Dz9-jZ-w45">
+            <objects>
+                <viewController id="oot-jv-R0b" customClass="UsersDetailedViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ZIU-c6-Ipv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kgL-Bz-s1e">
+                                <rect key="frame" x="16" y="49" width="343" height="271"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="271" id="dEh-qm-Ycw"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iRb-sf-kfD">
+                                <rect key="frame" x="16" y="350" width="343" height="26"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="taW-GQ-0Gj">
+                                <rect key="frame" x="16" y="392" width="343" height="26"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e47-C1-tcF">
+                                <rect key="frame" x="16" y="426" width="343" height="26"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="taW-GQ-0Gj" firstAttribute="trailing" secondItem="e47-C1-tcF" secondAttribute="trailing" id="2T4-eL-DS8"/>
+                            <constraint firstItem="iRb-sf-kfD" firstAttribute="leading" secondItem="taW-GQ-0Gj" secondAttribute="leading" id="2lr-n2-bxo"/>
+                            <constraint firstItem="e47-C1-tcF" firstAttribute="top" secondItem="taW-GQ-0Gj" secondAttribute="bottom" constant="8" id="7oh-YW-Zf2"/>
+                            <constraint firstItem="iRb-sf-kfD" firstAttribute="leading" secondItem="kgL-Bz-s1e" secondAttribute="leading" id="Gep-uL-A4a"/>
+                            <constraint firstItem="iRb-sf-kfD" firstAttribute="top" secondItem="kgL-Bz-s1e" secondAttribute="bottom" constant="30" id="Mfy-A8-pbF"/>
+                            <constraint firstItem="iRb-sf-kfD" firstAttribute="trailing" secondItem="taW-GQ-0Gj" secondAttribute="trailing" id="XOy-WF-iW1"/>
+                            <constraint firstItem="kgL-Bz-s1e" firstAttribute="trailing" secondItem="ZIU-c6-Ipv" secondAttribute="trailingMargin" id="djk-nh-uM9"/>
+                            <constraint firstItem="kgL-Bz-s1e" firstAttribute="top" secondItem="dME-De-Jql" secondAttribute="top" constant="5" id="e3D-su-zlS"/>
+                            <constraint firstItem="iRb-sf-kfD" firstAttribute="trailing" secondItem="kgL-Bz-s1e" secondAttribute="trailing" id="fbb-vc-UN5"/>
+                            <constraint firstItem="taW-GQ-0Gj" firstAttribute="leading" secondItem="e47-C1-tcF" secondAttribute="leading" id="h2m-y8-iuY"/>
+                            <constraint firstItem="taW-GQ-0Gj" firstAttribute="top" secondItem="iRb-sf-kfD" secondAttribute="bottom" constant="16" id="mO0-Bs-mQ7"/>
+                            <constraint firstItem="kgL-Bz-s1e" firstAttribute="leading" secondItem="ZIU-c6-Ipv" secondAttribute="leadingMargin" id="vH6-GD-Aat"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="dME-De-Jql"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="J5d-PA-o8E"/>
+                    <connections>
+                        <outlet property="userEmailLabel" destination="taW-GQ-0Gj" id="j3q-IS-PDm"/>
+                        <outlet property="userImageView" destination="kgL-Bz-s1e" id="ogO-R1-gtJ"/>
+                        <outlet property="userNameLabel" destination="iRb-sf-kfD" id="Ww6-iD-j5l"/>
+                        <outlet property="userNumberLabel" destination="e47-C1-tcF" id="8uq-XH-EgJ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="phy-en-rW5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1096.8" y="-1622.3388305847077"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="okL-YB-3xq">
+            <objects>
+                <navigationController id="CTx-Cc-2D2" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="6Ol-rT-R7j">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="t22-Uw-l6W" kind="relationship" relationship="rootViewController" id="ncj-X8-chN"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="a3O-Iu-HV5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-630" y="-1622"/>
+        </scene>
+    </scenes>
 </document>
