--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -4,25 +4,53 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
+        <!--Users Table View Controller-->
         <scene sceneID="lEq-Ic-kUo">
             <objects>
-                <tableViewController id="OUL-ti-Myg" sceneMemberID="viewController">
+                <tableViewController id="OUL-ti-Myg" customClass="UsersTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="lPt-Jq-Xux">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="9wS-pL-C3N">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="87" id="9wS-pL-C3N" customClass="UsersTableViewCell" customModule="Random_Users" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="87"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9wS-pL-C3N" id="VEU-Ay-dOc">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="87"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="3fX-te-Z88">
+                                            <rect key="frame" x="28" y="11" width="358" height="65"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vpA-hB-en7">
+                                                    <rect key="frame" x="0.0" y="0.0" width="73" height="65"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gas-cW-aHb">
+                                                    <rect key="frame" x="89" y="22.5" width="269" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailingMargin" secondItem="3fX-te-Z88" secondAttribute="trailing" constant="8" id="Jrx-HF-4x4"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="3fX-te-Z88" secondAttribute="bottom" id="NC5-2e-jRf"/>
+                                        <constraint firstItem="3fX-te-Z88" firstAttribute="leading" secondItem="VEU-Ay-dOc" secondAttribute="leadingMargin" constant="8" id="Y3p-Us-Ztm"/>
+                                        <constraint firstItem="3fX-te-Z88" firstAttribute="top" secondItem="VEU-Ay-dOc" secondAttribute="topMargin" id="jfx-Ji-5tr"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="nameLabel" destination="Gas-cW-aHb" id="2Vl-GX-QUf"/>
+                                    <outlet property="userImageView" destination="vpA-hB-en7" id="zu2-97-Qpb"/>
+                                    <segue destination="dLc-l4-9Br" kind="show" id="LUJ-wG-g6l"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -30,11 +58,86 @@
                             <outlet property="delegate" destination="OUL-ti-Myg" id="86o-8L-xDE"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="qkf-fR-Mx5"/>
+                    <navigationItem key="navigationItem" id="qkf-fR-Mx5">
+                        <barButtonItem key="rightBarButtonItem" title="Add" id="aLY-hS-FTv">
+                            <connections>
+                                <action selector="addBarButton:" destination="OUL-ti-Myg" id="aMD-GR-8on"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BjD-84-j7w" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1049.2753623188407" y="134.59821428571428"/>
+            <point key="canvasLocation" x="976.81159420289862" y="134.59821428571428"/>
+        </scene>
+        <!--Users Detail View Controller-->
+        <scene sceneID="OIO-iW-M60">
+            <objects>
+                <viewController id="dLc-l4-9Br" customClass="UsersDetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="rFT-FT-hjI">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="GiA-61-q4s">
+                                <rect key="frame" x="20" y="238" width="374" height="475"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Jjc-BM-uja">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="351"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="374" id="HUf-uW-qIc"/>
+                                            <constraint firstAttribute="height" constant="351" id="dlc-eK-EL7"/>
+                                        </constraints>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="eUb-lv-0iC">
+                                        <rect key="frame" x="0.0" y="375" width="76" height="100"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XDD-oq-UiQ">
+                                                <rect key="frame" x="0.0" y="0.0" width="76" height="35"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="29"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Xjn-wP-RNP">
+                                                <rect key="frame" x="0.0" y="51" width="42" height="49"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EAR-rq-omc">
+                                                        <rect key="frame" x="0.0" y="0.0" width="42" height="20.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fvH-MD-DNP">
+                                                        <rect key="frame" x="0.0" y="28.5" width="42" height="20.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="b6j-LJ-Pqx" firstAttribute="trailing" secondItem="GiA-61-q4s" secondAttribute="trailing" constant="20" id="11O-9x-8Wr"/>
+                            <constraint firstItem="GiA-61-q4s" firstAttribute="top" secondItem="b6j-LJ-Pqx" secondAttribute="top" constant="150" id="bku-fs-AnW"/>
+                            <constraint firstItem="GiA-61-q4s" firstAttribute="leading" secondItem="b6j-LJ-Pqx" secondAttribute="leading" constant="20" id="siF-37-TA5"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="b6j-LJ-Pqx"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="SWR-za-j4S"/>
+                    <connections>
+                        <outlet property="emailLabel" destination="fvH-MD-DNP" id="SVJ-SX-F0M"/>
+                        <outlet property="nameLabel" destination="XDD-oq-UiQ" id="e4s-Oc-C1F"/>
+                        <outlet property="phoneNumberLabel" destination="EAR-rq-omc" id="8bp-ms-H3z"/>
+                        <outlet property="userImageView" destination="Jjc-BM-uja" id="maD-JN-ZyV"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AW1-qQ-hQo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1811.594202898551" y="134.59821428571428"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="lX6-Vx-EJJ">
